# Code-Coverage-Dashboard

./: README.md  package-lock.json  package.json
Adi15/: index.html  package-lock.json  package.json  vite.config.js
Adi15/api/: packages.js  repository.js  runhistory.js  summary.js  uncovered.js
Adi15/src/: App.jsx  main.jsx
Adi15/src/Components/: DashboardLayout.jsx  ErrorBoundary.jsx  GlobalOverview.jsx  Login.jsx  RepositoryDetails.jsx
Adi15/src/Components/GlobalOverview/: DistributionBarChart.jsx  Heatmap.jsx  RepositoryHealth.jsx  SummaryCards.jsx
Adi15/src/Components/RepoDetails/: FileTable.jsx  PackageTree.jsx  RunHistory.jsx  SummaryCards.jsx
Adi15/src/Data/: mockData.json
Adi15/src/utils/: calculations.jsx  logger.js
project 2/: _.vercel.pem  backend2-server-key.pem  dockerfile  main.py  pyproject.toml
project 2/TestResultsDatastore/reports-service/: 1.xml  2.xml  3.xml
project 2/TestResultsDatastore/settings-service/: 1.xml  2.xml  3.xml
project 2/TestResultsDatastore/workflow-service/: 1.xml  2.xml  3.xml
