[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "fastapi[standard]>=0.137.1",
    "google-auth>=2.55.1",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
